fixed creation add and model on unix-like system